# knowledge-Vault

./: .gitignore  LICENSE  README.md
backend/: .env.example  .gitignore  QUICKSTART.md  README.md  pyproject.toml
backend/scripts/: create_sample_data.py  run_ai_tests.py  test_ai_features.ps1  test_ai_features.py
backend/src/pkm_backend/: cli.py  main.py
backend/src/pkm_backend/api/v1/: router.py
backend/src/pkm_backend/api/v1/endpoints/: ai.py  notes.py  search.py  tags.py  workspaces.py
backend/src/pkm_backend/core/: config.py
backend/src/pkm_backend/db/: database.py  init_db.py
backend/src/pkm_backend/models/: database.py  schemas.py
backend/src/pkm_backend/services/: ollama.py  ollama_old.py
backend/tests/: conftest.py  test_ai_features.py  test_main.py  test_notes.py  test_workspaces.py
