[project]
name = "pkm-backend"
version = "0.1.0"
description = "Privacy-focused Personal Knowledge Management System Backend"
readme = "README.md"
authors = [
    { name = "pranavraj012", email = "balapranav006@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.1",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.3",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "markdown>=3.5.1",
    "pypdf>=3.0.1",
    "httpx>=0.25.2",
    "aiohttp>=3.9.1",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.8.2",
    "watchdog>=3.0.0",
    "loguru>=0.7.2",
    "ollama>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.25.2",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
pkm-backend = "pkm_backend.main:app"
pkm-cli = "pkm_backend.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "rich>=14.1.0",
    "typer>=0.19.2",
]
